apps/web/filerun-mfox/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filerun-mfox
  namespace: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: filerun-mfox
  template:
    metadata:
      labels:
        app: filerun-mfox
    spec:
      containers:
      - name: filerun-mfox
        image: filerun/filerun:8.4
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "6Gi"
            cpu: "6000m"
        ports:
          - containerPort: 80
        volumeMounts:
          - name: user-files
            mountPath: /user-files
          - name: filerun-html
            mountPath: /var/www/html
      volumes:
      - name: user-files
        persistentVolumeClaim:
          claimName: filerun-mfox-files-pvc
      - name: filerun-html
        hostPath:
          path: /mnt/kubernetes-data/filerun-mfox/html # This path contains the same files on all nodes 
          type: DirectoryOrCreate
