apps/web/filerun-mfox/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: filerun-mfox
spec:
  selector:
    app: filerun-mfox
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
